--- a/source/Q-Circuit-Editor.css
+++ b/source/Q-Circuit-Editor.css
@@ -99,7 +99,7 @@
 .Q-circuit-palette {
 
 	position: relative;
-	width:  100%;
+	width: 100%;
 }
 .Q-circuit-palette {
 
@@ -107,7 +107,17 @@
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	line-height: 0;
 }
+.Q-circuit-palette > div {
+
+	display: inline-block;
+	position: relative;
+	width:  4rem;
+	height: 4rem;
+}
+
+
 .Q-circuit {
 
 	margin: 1rem 0 2rem 0;
@@ -138,6 +148,7 @@
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	margin-bottom: 0.5rem;
 }
 .Q-circuit-button {
 
@@ -240,13 +251,13 @@
 }
 .Q-circuit-board {
 
-	position: relative
+	position: relative;
 	-moz-user-select: none;
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
 }
-.Q-circuit-palette,
+/*.Q-circuit-palette,*/
 .Q-circuit-board-foreground,
 .Q-circuit-board-background,
 .Q-circuit-clipboard {
@@ -257,7 +268,7 @@
 	grid-auto-columns: 4rem;
 	grid-auto-flow: column;
 }
-.Q-circuit-palette,
+/*.Q-circuit-palette,*/
 .Q-circuit-board-foreground,
 .Q-circuit-board-background {
 
@@ -274,6 +285,10 @@
 	min-width:  4rem;
 	min-height: 4rem;
 	transform: scale( 1.05 );
+}
+.Q-circuit-clipboard, .Q-circuit-clipboard > div {
+
+	cursor: grabbing;
 }
 .Q-circuit-clipboard-destroy .Q-circuit-operation {
 
