--- a/Q/Q.css
+++ b/Q/Q.css
@@ -127,13 +127,14 @@ svg, :root {
 
 	--Q-color-background-hue: var( --Q-color-base-hue );
 	--Q-color-background-saturation: 15%;
-	--Q-color-background-lightness:  95%;	
+	--Q-color-background-lightness:  97%;	
 	--Q-color-background: hsl(
 
 		var( --Q-color-background-hue ),
 		var( --Q-color-background-saturation ),
 		var( --Q-color-background-lightness )
 	);
+	/*--Q-color-background: white;*/
 
 
 	/*  Misc  */
