Fixed in-moment component drag of multi-q op, including overwrite..

--- a/Q/Q-Circuit-Editor.css
+++ b/Q/Q-Circuit-Editor.css
@@ -704,11 +704,12 @@
 
 
 
-
+.Q-circuit-clipboard > div,
 .Q-circuit-cell-selected {
 
 	background-color: white;
 }
+.Q-circuit-clipboard > div:before,
 .Q-circuit-cell-selected:before {
 
 	content: "";
