--- a/Q/Q-Circuit-Editor.css
+++ b/Q/Q-Circuit-Editor.css
@@ -15,13 +15,13 @@
 
 /*
 
-	Z-indices:
+	Z indices:
 
-	Clipboard:  100
-	Selected:    10
-	Operation:    0
-	Shadow:     -10
-	Background: -20
+	Clipboard   =100
+	Selected op   10
+	Operation      0
+	Shadow       -10
+	Background   -20
 
 
 
