--- a/Q/Q.css
+++ b/Q/Q.css
@@ -317,10 +317,12 @@ svg, :root {
 
 
 
+/*
 
+	The below still need to be prefaced with “Q-”
+	and for the HTML pages to be updated accordingly.
 
-
-
+*/
 
 
 
@@ -335,8 +337,6 @@ svg, :root {
 
 
 .maths {
-
-	/*margin: 20px 60px 20px 40px;*/
 
 	max-width: 100%;
 	overflow-x: auto;
@@ -387,10 +387,6 @@ dd .maths {
 
 
 
-
-
-
-
 .matrix {
 	
 	display: inline-block;
@@ -432,6 +428,8 @@ dd .maths {
 }
 
 
+
+
 .complex-vector {
 
 	font-family: var( --Q-font-family-mono );
@@ -460,103 +458,6 @@ dd .maths {
 
 	content: '';
 }
-
-
-
-
-
-
-
-
-
-
-
-
-#bloch-sphere-qubits, 
-#bloch-sphere-gates {
-
-	display: inline-block;
-	margin: 1rem 0;
-	border-radius: 0.5rem;
-	background-color: var( --Q-color-newsprint );
-	padding: 0;
-	font-family: var( --Q-font-family-sans );
-	overflow: hidden;
-	box-shadow: 0 0.1rem 0.3rem rgba( 0, 0, 0, 0.3 );	
-}
-.bloch-sphere-qubit-container, 
-.bloch-sphere-gate-container {
-
-	float: left;
-	width:  5rem; 
-	height: 8rem;
-	padding-top: 0.4rem;
-	text-align: center;
-	overflow: hidden;
-	cursor: pointer;
-	transition: background-color 0.5s;
-}
-.bloch-sphere-qubit-container:hover,
-.bloch-sphere-gate-container:hover  {
-	
-	background-color: #DDD;
-	transition: background-color 0s;
-}
-.bloch-sphere-qubit-container.selected,
-.bloch-sphere-gate-container.selected {
-	
-	background-color: var( --Q-color-charcoal );
-	color: var( --Q-color-white );
-}
-.bloch-sphere-qubit-container p,
-.bloch-sphere-gate-container p {
-
-	font-size:   0.8rem;
-	line-height: 18px;
-}
-.bloch-sphere-qubit {
-
-	display: inline-block;
-	margin:  0.3rem 0;
-	width:  3rem;
-	height: 3rem;
-	border-radius: 100%;
-	background-color: var( --Q-color-white );
-	text-align: center;
-	font-weight: 900;
-	font-size:   1.5rem;
-	line-height: 3.0rem;
-	color: var( --Q-color-black );
-}
-
-
-.bloch-sphere-gate-container {
-
-	width:  4.3rem;
-	height: 5rem;
-}
-.bloch-sphere-gate {
-
-	display: inline-block;
-	margin:  0.3rem 0;
-	width:  2.2rem;
-	height: 2.2rem;
-	background-color: var( --Q-color-white );
-	text-align: center;
-	font-weight: 900;
-	font-size:   1.5rem;
-	line-height: 2.2rem;
-	color: var( --Q-color-black );
-}
-.interactive-container {
-
-	font-family: var( --Q-font-family-sans );
-}
-
-
-
-
-
 
 
 
