--- a/assets/documentation.css
+++ b/assets/documentation.css
@@ -681,6 +681,7 @@ main img {
 	border-radius: 0.5rem;
 	max-width: calc( 100% - 1rem );
 	height: auto;
+	background-color: var( --Q-color-background );
 }
 
 
