--- a/assets/documentation.css
+++ b/assets/documentation.css
@@ -520,9 +520,22 @@ img.figure {
 
 	opacity: 0.7;
 }
+.left {
+
+	text-align: left;
+}
+.right {
+
+	text-align: right;
+}
 .center {
 
 	text-align: center;
+}
+.middle {
+
+	display: inline-block;
+	vertical-align: middle;
 }
 
 
@@ -717,6 +730,7 @@ header img {
 
 table {
 
+	display: inline-block;
 	margin: 0;
 	border-collapse: collapse;
 /*	overflow: hidden;*/
@@ -725,7 +739,7 @@ td {
 
 	transition: background-color 0.5s, color 0.5s;
 }
-td:hover {
+.matrix td:hover {
 	
 	background-color: hsl( 
 		
