--- a/Q/Q.css
+++ b/Q/Q.css
@@ -341,6 +341,8 @@ svg, :root {
 	max-width: 100%;
 	overflow-x: auto;
 	font-family: var( --Q-font-family-sans );
+	/*letter-spacing: 0.03em;*/
+	word-spacing: 0.2em;
 }
 dd .maths {
 
@@ -393,22 +395,22 @@ dd .maths {
 	vertical-align: middle;
 	position: relative;
 	align: middle;
-	margin:  1em;
+	margin:  1em 0.5em;
 	padding: 1em;
-	font-family: var( --Q-font-family-mono );
+	/*font-family: var( --Q-font-family-mono );*/
 	font-weight: 300;
 	line-height: 1em;
 	text-align: right;
 }
 .matrix td {
 
-	padding: 5px 10px;
+	padding: 0.25em 0.5em;
 }
 .matrix-bracket-left, .matrix-bracket-right {
 
 	position: absolute;
 	top:      0;
-	width:    5px;
+	width:    0.5em;
 	height: 100%;
 	border:   1px solid #CCC;
 }
